# sirius-rust

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.rs  justfile
.memory/: 2026-03-19.md  2026-03-20.md  2026-03-21.md  MEMORY.md
scripts/: build_extension.sh
src/: error.rs  ext_api.rs  fallback.rs  ffi.rs  gpu_columns.rs  gpu_context.rs  gpu_executor.rs  lib.rs  sirius_context.rs  sirius_extension.rs
src/cuda/: backend.rs  mod.rs
src/cuda/kernels/: count.cu  count.rs  sum.cu  sum.rs
src/data/: chunk.rs  column.rs  mod.rs  types.rs
src/executor/: mock_gpu.rs  mod.rs
src/memory/: gpu_memory.rs  mod.rs
src/op/: mod.rs
src/op/aggregate/: avg.rs  avg_agg.rs  count.rs  count_agg.rs  max.rs  max_agg.rs  min.rs  min_agg.rs  mod.rs  register.rs  sum.rs  sum_agg.rs  traits.rs
src/operator/: mod.rs
src/pipeline/: mod.rs
src/plan/: mod.rs
src/planner/: mod.rs
tests/: gpu.rs  integration.rs  mock_gpu.rs
tests/mock_gpu/: test_aggregate_registry.rs  test_count.rs  test_mock_gpu.rs  test_sum.rs
tests/tpch/: compare.sh  gen_sirius_queries.sh  run_native.sh  run_sirius.sh
tests/tpch/queries/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql
tests/tpch/queries/sirius/: q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql  q10.sql  q11.sql  q12.sql  q13.sql  (+8 more)
tests/tpch/results/: native_sf0.1.txt  native_sf1.txt  native_sf10.txt  sirius_sf0.1.txt  sirius_sf10.txt
